--- a/Part3/learning/package.json
+++ b/Part3/learning/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/Kenno104/FullStackOpen#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.3",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1"
